--- a/.gitignore
+++ b/.gitignore
@@ -32,14 +32,13 @@ inc/
 /Makefile.old
 /MANIFEST.bak
 /pm_to_blib
-/*.zip
+*.zip
 logs/*
-^blib
-^pm_to_blib
-^.*.bak
-^.*.old
-^t.*sessions
-^cover_db
-^.*\.log
-^.*\.swp$
+blib
+pm_to_blib
+*.bak
+*.old
+.*sessions
+*.log
+.*swp
 
